finding overlapping elements, fix edit html architecture

--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -152,7 +152,9 @@ nav {
 }
 
 .user-page-container {
-  height: 100vh;
+  position: fixed;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .user-page {
